<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="general_web_service_base_url">https://192.52.243.12/ToguisWebServices/</string>
    <string name="keystore">The12@man</string>
    <string name="app_name">Toguis</string>
    <string name="action_settings">Configuration</string>
    <string name="title_activity_login">Login</string>
    <string name="login_txt_email_hint">email@domain.com</string>
    <string name="login_txt_password_hint">Password</string>
    <string name="login_lbl_email_text">Email</string>
    <string name="login_lbl_password_text">Password</string>
    <string name="login_btn_signin_text">Login</string>
    <string name="login_btn_forgot_password_text">Forgot my password</string>
    <string name="create_account_txt_email_hint">email@domain.com</string>
    <string name="create_account_lbl_email_text">Email</string>
    <string name="create_account_txt_password_hint">Least 6 characters</string>
    <string name="create_account_lbl_password_text">Password</string>
    <string name="create_account_txt_names_hint">Names and last names</string>
    <string name="create_account_lbl_names_text">Names</string>
    <string name="create_account_txt_repeat_password_hint">Repeat</string>
    <string name="create_account_lbl_repeat_password_text">Repeat</string>
    <string name="create_account_btn_signin_text">Login</string>
    <string name="create_account_lbl_gender_text">Gender</string>
    <string name="create_account_rbt_male_text">Man</string>
    <string name="create_account_rbt_female_text">Woman</string>
    <string name="create_account_successfully_message">Account created successfully</string>
    <string name="create_account_error_message">This username already exists</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="main_img_splash_description">splash image</string>
    <string name="title_activity_config_login">Welcome</string>
    <string name="config_login_img_title_description">title</string>
    <string name="config_login_btn_google_login_text">Login with Google</string>
    <string name="config_login_btn_facebook_Login_text">Login with Facebook</string>
    <string name="config_login_btn_create_account_text">Create account</string>
    <string name="config_login_btn_signin_text">Login</string>
    <string name="config_login_error_message">An error has occurred while updating data</string>
    <string name="general_login_successfully_title">Welcome</string>
    <string name="general_login_successfully_message">Welcome to Toguis</string>
    <string name="general_login_error_title">It can\'t authenticate</string>
    <string name="general_login_error_message">Your username or password are wrong</string>
    <string name="general_login_error_message2">An error has occurred when authenticating</string>
    <string name="general_login_button_text">Close</string>
    <string name="general_email_invalid_message">You must enter an email</string>
    <string name="general_email_invalid_message2">Invalid Email</string>
    <string name="general_email_invalid_message3">This username already exists</string>
    <string name="general_password_invalid_message">You must enter a password</string>
    <string name="general_password_invalid_message2">Least 6 characters for the password</string>
    <string name="general_password_invalid_message3">Tha passwords don\'t match</string>
    <string name="general_names_invalid_message">You must enter your names</string>
    <string name="general_message_warning">Warning</string>
    <string name="general_message_notice">Notice</string>
    <string name="general_message_error">Error</string>
    <string name="general_save_db_error">An error has occurred when storing the information</string>
    <string name="general_db_error">An error has occurred while accessing the service</string>
    <string name="general_google_play_not_installed">Google play must be installed</string>
    <string name="general_progress_message">Loading interest points, please wait&#8230;</string>
    <string name="general_progress_message_loading">Loading, please wait&#8230;</string>
    <string name="general_toggle_button_text"></string>
    <string name="general_load_map_error">Unable to load the map</string>
    <string name="general_map_current_position">My position</string>
    <string name="general_setting_save_data">Settings stored successfully</string>
    <string name="general_ar_error">Unable to create augmented reality view</string>
    <string name="title_activity_forgot_password">Recover password</string>
    <string name="forgot_password_lbl_message_text">Please enter your email to continue</string>
    <string name="forgot_password_txt_verify_email_hint">email@domain.com</string>
    <string name="forgot_password_btn_send_email_text">Send</string>
    <string name="forgot_password_message">The Email has been sent</string>
    <string name="app_id">735670486470675</string>
    <string name="title_activity_content">Toguis</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_swipe_content">Toguis</string>
    <string name="list_point_item_img_point_content_description">point image</string>
    <string name="list_point_item_lbl_point_title_text">point title</string>
    <string name="list_point_item_lbl_point_desc_text">point description</string>
    <string name="general_menus_search">Search</string>
    <string name="general_menus_cancel">Cancel</string>
    <string name="general_menus_clear">Clear</string>
    <string name="general_menus_refresh">Refresh</string>
    <string name="general_menus_ok">Accept</string>
    <string name="general_empty_text">empty</string>
    <string name="swipe_content_tab_site">Sites</string>
    <string name="swipe_content_tab_map">Map</string>
    <string name="swipe_content_tab_ar">AR</string>
    <string name="swipe_content_tab_settings">Settings</string>
    <string name="poi_detail_title_activity">Interest point</string>
    <string name="poi_detail_image_description">image placeholder</string>
    <string name="poi_detail_txt_rating_text">Rating: </string>
    <string name="poi_detail_txt_description_text">Description: </string>
    <string name="poi_detail_txt_address_text">Address: </string>
    <string name="dialog_search_txt_search_hint">Search</string>
    <string name="dialog_rating_txt_rating_dialog_title_text">Rating this site!</string>
    <string name="dialog_rating_txt_rating_note">Note: This is your personal rating</string>
    <string name="title_activity_comments">Comments</string>
    <string name="comments_btn_send_comment_text">Send</string>
    <string name="comments_txt_comment_hint">Write a comment</string>
    <string name="comments_message_empty">You must enter a comment</string>
    <string name="comments_message_succesful">Message sended</string>
    <string name="comments_message_unsuccesful">There was an error sending your message</string>
    <string name="title_activity_navigation">Navigation map</string>
    <string name="title_activity_navigation_route">Navigation path</string>
    <string name="title_activity_poi_image">PoiImageActivity</string>
    <string name="settings_lbl_monuments_text">View monuments</string>
    <string name="settings_lbl_museums_text">View museums</string>
    <string name="settings_lbl_hotels_text">View hotels</string>
    <string name="settings_lbl_restaurants_text">View restaurants</string>
    <string name="settings_lbl_interest_text">View interesting places</string>
    <string name="settings_lbl_buildings_text">View architectural works</string>
    <string name="settings_lbl_transport_text">View transportation</string>
    <string name="settings_lbl_events_text">View events</string>
    <string name="settings_lbl_distance_text">Max distance Kms (0 Km = infinite)</string>
    <string name="settings_lbl_cities_text">Selected City</string>
    <string name="settings_lbl_language_text">Language</string>
    <string name="settings_btn_save_settings_text">Save</string>
    <string name="title_activity_arview">ARViewActivity</string>
    <string name="ar_lbl_ar_text">Touch to start</string>
    <string name="ar_error_data_text">Error when trying to receive data</string>
    <string name="ar_added_data_text">points added</string>
    <string name="ar_search_text">Searching&#8230;</string>
    <string name="title_activity_no_network">Connection error</string>
    <string name="hello_world">Hello world!</string>
	<string name="nonetwork_lbl_nonet_text">You must be connected to internet to access Toguis!</string>
	<string name="nonetwork_btn_try_text">Try again</string>
</resources>
