<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="co.edu.uniajc.vtf.security.ConfigLoginActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/config_login_img_title_description"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_title" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:orientation="vertical" >
        
        <com.facebook.widget.LoginButton
                android:id="@+id/btnFacebookLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                facebook:confirm_logout="false"
                facebook:fetch_user_info="true"
                android:text="@string/config_login_btn_facebook_Login_text"
                />
        <Button
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_login_btn_google_login_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="26dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick_NavigateCreateAccount"
            android:text="@string/config_login_btn_create_account_text" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick_GoLogin"
            android:text="@string/config_login_btn_signin_text" />

    </LinearLayout>

</RelativeLayout>