<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_repeat"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="co.edu.uniajc.vtf.security.ForgotPasswordActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/forgot_password_lbl_message_text"
        android:textColor="#cccccc" />

    <EditText
        android:id="@+id/txtVerifyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtMessage"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/forgot_password_txt_verify_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#cccccc" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVerifyEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick_SendRecoveryMail"
        android:text="@string/forgot_password_btn_send_email_text" />

</RelativeLayout>

